5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4327/executions/1749_3096.log
== TEST (2019-05-15 19:12:28) 
-- CODE:
numn=int(input("num: "))
cont=0
while(num >= 0):
	if(num != 0):
		cont=cont+num
   else(num=0):
		print(cont)
-- ERROR:
File "XXXX", line 6
    else(num=0):
               ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 19:12:55) 
-- CODE:
numn=int(input("num: "))
cont=0
while(num >= 0):
	if(num != 0):
		cont=cont+num
	else:
		print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    while(num >= 0):
NameError: name 'num' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 19:13:13) 
-- CODE:
num=int(input("num: "))
cont=0
while(num >= 0):
	if(num != 0):
		cont=cont+num
	else:
		print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    while(num >= 0):
NameError: name 'num' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 19:13:29) 
-- CODE:
num=int(input("num: "))
cont=0
while(num >= 0):
	
	if(num != 0):
		cont=cont+num
	else:
		print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    while(num >= 0):
NameError: name 'num' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 19:13:44) 
-- CODE:
num=int(input("num: "))

while(num >= 0):
	cont=0
	if(num != 0):
		cont=cont+num
	else:
		print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    while(num >= 0):
NameError: name 'num' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 19:14:20) 
-- CODE:
num=int(input("num: "))
while(num >= 0):
	if(num != 0):
		cont=0
		cont=cont+num
	else:
		print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    while(num >= 0):
NameError: name 'num' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 19:14:43) 
-- CODE:
num=int(input("num: "))

while(num >= 0):
	
	if(num != 0):
		cont=0
		cont=cont+num
	else:
		print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    while(num >= 0):
NameError: name 'num' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 19:16:31) 
-- CODE:
num=int(input("num: "))

while(num >= 0):
	if(num != 0):
		cont = 0
		cont=cont+num
	elif(num=0):
print(cont)
-- ERROR:
File "XXXX", line 7
    elif(num=0):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 19:16:45) 
-- CODE:
num=int(input("num: "))

while(num >= 0):
	if(num != 0):
		cont = 0
		cont=cont+num
	elif(num == 0):
print(cont)
-- ERROR:
File "XXXX", line 8
    print(cont)
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 19:17:12) 
-- CODE:
num = int(input("num: "))

while(num >= 0):
	if(num != 0):
		
		cont = 0
		cont = cont + num
	
	elif(num == 0):
print(cont)
-- ERROR:
File "XXXX", line 10
    print(cont)
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 19:17:24) 
-- CODE:
num = int(input("num: "))

while(num >= 0):
	if(num != 0):
		
		cont = 0
		cont = cont + num
	
	elif(num == 0): 
		print(cont)
-- ERROR:
File "XXXX", line 10
    print(cont)
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 19:17:56) 
-- CODE:
num = int(input("num: "))

while(num >= 0):
	if(num != 0):
		cont = 0
		cont = cont + num
		
-- ERROR:
File "XXXX", line 10
    print(cont)
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 19:18:33) 
-- CODE:
num = int(input("num: "))

while(num =>0):
	
	if(num != 0):
		cont = 0
		cont = cont + num
		
-- ERROR:
File "XXXX", line 3
    while(num =>0):
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 19:36:58) 
-- CODE:
num = input("posição: ")

while(num >= 0):
		if(num == 1):
			
		elif(num == 2):
			
		elif(num == 3):
		
		elif(num<=4):
			
	
		
		
			
			

		
-- ERROR:
File "XXXX", line 6
    elif(num == 2):
       ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 19:53:16) 
-- CODE:
num = input("posição: ")

while(num >= 0):
	
	if(num == "1" ):
		pri=num * 20
		ptotal1=ptotal+pri
		
	elif(num == 2):
		sec=(num/2)*15
		ptotal2=ptotal2+sec
		
	elif(num == 3):
		tri=(num/3)*10
		ptotal3=ptotal3+tri
		
	elif(num >= 4 and num<= 11):
		ret= 11-num
		ptotal4=ptotal4+ret
		
	elif(num>11):
		neu=num*0
		
total=ptotal1+ptotal2+ptotal4+ptotal4+neu

print(total)


		
			
			
	
		
		
			
			

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    while(num >= 0):
TypeError: '>=' not supported between instances of 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 19:53:51) 
-- CODE:
num = int(input("posição: "))

while(num >= 0):
	
	if(num == "1" ):
		pri=num * 20
		ptotal1=ptotal+pri
		
	elif(num == 2):
		sec=(num/2)*15
		ptotal2=ptotal2+sec
		
	elif(num == 3):
		tri=(num/3)*10
		ptotal3=ptotal3+tri
		
	elif(num >= 4 and num<= 11):
		ret= 11-num
		ptotal4=ptotal4+ret
		
	elif(num>11):
		neu=num*0
		
total=ptotal1+ptotal2+ptotal4+ptotal4+neu

print(total)


		
			
			
	
		
		
			
			

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    while(num >= 0):
TypeError: '>=' not supported between instances of 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 19:54:05) 
-- CODE:
num = int(input("posição: "))

while(num >= 0):
	if(num == 1 ):
		pri=num * 20
		ptotal1=ptotal+pri
		
	elif(num == 2):
		sec=(num/2)*15
		ptotal2=ptotal2+sec
		
	elif(num == 3):
		tri=(num/3)*10
		ptotal3=ptotal3+tri
		
	elif(num >= 4 and num<= 11):
		ret= 11-num
		ptotal4=ptotal4+ret
		
	elif(num>11):
		neu=num*0
		
total=ptotal1+ptotal2+ptotal4+ptotal4+neu

print(total)


		
			
			
	
		
		
			
			

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    ptotal1=ptotal+pri
NameError: name 'ptotal' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 19:54:43) 
-- CODE:
num = int(input("posição: "))

while(num >= 0):
	
	if(num == 1 ):
		pri=num * 20
		ptotal1=ptotal1+pri
		
	elif(num == 2):
		sec=(num/2)*15
		ptotal2=ptotal2+sec
		
	elif(num == 3):
		tri=(num/3)*10
		ptotal3=ptotal3+tri
		
	elif(num >= 4 and num<= 11):
		ret= 11-num
		ptotal4=ptotal4+ret
		
	elif(num>11):
		neu=num*0
		
total=ptotal1+ptotal2+ptotal4+ptotal4+neu

print(total)


		
			
			
	
		
		
			
			

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    ptotal1=ptotal1+pri
NameError: name 'ptotal1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
